gitlab/templates/backup-acc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backup-reader
  namespace: rds-git
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: backup-volume
      mountPath: /mnt/backup
  volumes:
  - name: backup-volume
    persistentVolumeClaim:
      claimName: gitlab-backup-pvc
  restartPolicy: Never
